# void

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
engine/: main.cpp
engine/include/: actor.hpp  asset_manager.hpp  asset_types.hpp  audio_manager.hpp  autoload.hpp  command.hpp  component.hpp  debug_windows.hpp  ecs.hpp  engine.hpp  engine_components.hpp  renderer.hpp  renderer_types.hpp  scene.hpp  scene_manager.hpp  utilities.hpp
engine/src/: actor.cpp  asset_manager.cpp  audio_manager.cpp  autoload.cpp  component.cpp  engine.cpp  renderer.cpp  scene.cpp  scene_manager.cpp
game/actors/: player.hpp
game/assets/shaders/: color_quad.frag.glsl  texture_quad.frag.glsl  texture_quad.vert.glsl
game/components/: anim_sprite.hpp  drawable.hpp  sprite.hpp  translation.hpp
game/scenes/: test_ground_scn.hpp
game/scenes/levels/: 00_Playground.hpp
game/systems/: drawing.hpp  entities_movement.hpp  player_controller.hpp
